# market-streaming-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  quote_symbols.txt  requirements.txt  symbols.txt
.astro/: config.yaml
.github/workflows/: astro-deploy.yml  ci.yml
dags/: README.md  eod_pipeline.py
dashboard/: Home.py  README.md  app.py  requirements.txt
dashboard/.streamlit/: config.toml  secrets.toml.example
dashboard/pages/: 1_Pipeline_Health.py  2_Market_Overview.py  3_Risk_Analytics.py  4_Data_Quality.py  5_Microstructure.py  6_Fundamentals.py  7_Dividends.py  8_Reconciliation.py
dashboard/utils/: snowflake_conn.py  theme.py
monitoring/: docker-compose.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: default.yml
notebooks/: bronze_ingest.py  bronze_validate.py  gold_ingest.py  quotes_gold_ingest.py  quotes_silver_ingest.py  run_pipeline.py  silver_ingest.py  snowflake_sync.py  trades_gold_ingest.py  trades_silver_ingest.py
scripts/: bq_to_snowflake_batch.py  bq_to_snowflake_dividends.py  bq_to_snowflake_fundamentals.py  bq_to_snowflake_returns.py  check_data_quality.py  create_kafka_topics.py  replay_spillover.py  synthetic_publisher.py
src/market_streaming/: config.py  seed_security_master.py  transform_utils.py
src/market_streaming/bronze/: transforms.py
src/market_streaming/gold/: quotes_transforms.py  trades_transforms.py  transforms.py
src/market_streaming/observability/: alerts.py  pipeline_metrics.py
src/market_streaming/producer/: envelope.py  kafka_sink.py  main.py  metrics.py  polygon_ws.py  spillover.py
src/market_streaming/silver/: quotes_transforms.py  trades_transforms.py  transforms.py
src/market_streaming/sync/: snowflake_writer.py
tests/: test_alerts.py  test_bronze_transforms.py  test_config.py  test_envelope.py  test_gold_transforms.py  test_metrics.py  test_polygon_ws.py  test_quote_symbols.py  test_silver_transforms.py  test_spillover.py
tests/dags/: test_dag_example.py
warehouse/: dbt_project.yml  profiles.example.yml
warehouse/macros/: generate_schema_name.sql
warehouse/models/marts/: mart_recon__daily_delta.sql  mart_recon__returns_delta.sql  schema.yml
warehouse/models/marts/analytics/: mart_analytics__correlation_matrix.sql  mart_analytics__daily_stats.sql  mart_analytics__rolling_risk.sql  (+6 more)
warehouse/models/staging/: schema.yml  sources.yml  stg_batch__company_overview.sql  stg_batch__daily_prices.sql  stg_batch__daily_returns.sql  stg_batch__dividend_yield.sql  stg_batch__fundamentals_factor_scores.sql  stg_batch__fundamentals_valuation.sql  stg_streaming__daily_rollup.sql  stg_streaming__minute_bars.sql  stg_streaming__quote_stats.sql  stg_streaming__trades.sql
workflows/: pipeline_workflow.yml
(+7 files in other folders)
