[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "market-streaming-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "google-cloud-bigquery>=3.20",
    "pandas>=2.2",
    "pyarrow>=15",
]

[project.optional-dependencies]
producer = [
    "confluent-kafka>=2.5",
    "websockets>=12",
    "prometheus-client>=0.20",
    "structlog>=24",
]
recon = [
    "dbt-core>=1.8",
    "dbt-snowflake>=1.8",
    "snowflake-connector-python>=3.10",
]
dashboard = [
    "streamlit>=1.35",
    "plotly>=5.22",
    "snowflake-connector-python>=3.10",
    "pandas>=2.2",
]
dev = [
    "pytest>=8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
