[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "market-streaming-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "google-cloud-bigquery>=3.20",
    "pandas>=2.2",
    "pyarrow>=15",
]

[project.optional-dependencies]
producer = [
    "confluent-kafka>=2.5",
    "websockets>=12",
    "prometheus-client>=0.20",
    "structlog>=24",
]
recon = [
    "dbt-core>=1.8",
    "dbt-snowflake>=1.8",
    "snowflake-connector-python>=3.10",
]
dashboard = [
    "streamlit>=1.35",
    "plotly>=5.22",
    "snowflake-connector-python>=3.10",
    "pandas>=2.2",
]
dev = [
    "pytest>=8",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/market_streaming/bronze/transforms.py" = ["F821"]
"tests/test_bronze_transforms.py" = ["E402"]
"tests/test_silver_transforms.py" = ["E402"]
"tests/test_gold_transforms.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["market_streaming"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
